Stylesheet/emote/tag updates 2013-01-13

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -260,13 +260,13 @@ a[href|="/creepypie"] {
     height: 200px;
     background-image: url(%%creepypie%%) }
 
-a[href|="/idunnoblamemadmean"] {
+a[href|="/bestpony"] {
     display: block;
     clear: none;
     float: left;
-    width: 153px;
-    height: 170px;
-    background-image: url(%%face%%) }
+    width: 198px;
+    height: 250px;
+    background-image: url(%%dJkY5%%) }
 
 a[href|="/itspartytime"] {
     display: block;
@@ -372,6 +372,14 @@ a[href|="/tentenwouldincubate"] {
     height: 324px;
     background-image: url(%%wyime%%) }
 
+a[href|="/tentenwouldflabrus"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 400px;
+    height: 324px;
+    background-image: url(%%qcbeard%%) }
+
 a[href|="/dyelove"] {
     display: block;
     clear: none;
@@ -403,3 +411,19 @@ a[href|="/miggyb2"] {
     width: 249px;
     height: 300px;
     background-image: url(%%miggy2%%) }
+
+a[href|="/theworstpony"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image: url(%%long-time-no-see-applejack--by-ashidaru-d5kee14%%) }
+
+a[href|="/qcgala"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 273px;
+    height: 300px;
+    background-image: url(%%qcgala%%) }
