--- a/source-css/daylightemotes.css
+++ b/source-css/daylightemotes.css
@@ -627,6 +627,18 @@ a[href="/seriouslydiscord"] {
     background-position: -350px -0px
     }
 
+a[href="/joydragon"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 75px;
+    height: 100px;
+    background-image: url(%%you-touch-this-and-ill-cut-you-darkle%%) !important
+    }
+a[href="/joydragon"] {
+    background-position: -200px -129px
+    }
+
 
 /***********
 
