--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -301,14 +301,14 @@ background-image: url(%%bjshake%%);
 
 a[href|="/bjshake"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"], a[href|="/mop"], a[href|="/lppuppy"], a[href|="/queenwhiskey"], a[href|="/motherofgawd"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"], a[href|="/mop"], a[href|="/lppuppy"], a[href|="/queenwhiskey"], a[href|="/motherofgawd"], a[href|="/fightcalamity"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v33%%);
+background-image: url(%%foe-em3-v34%%);
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -329,26 +329,33 @@ a[href|="/g3bj"]{ background-position: 0px -2470px; width: 75px; height: 70px;}
 a[href|="/mop"]{ background-position: 0px -2545px; width: 100px; height: 150px;}
 a[href|="/lppuppy"]{ background-position: 0px -1415px; width: 70px; height: 68px;}
 a[href|="/motherofgawd"]{ background-position: 0px -2700px; width: 96px; height: 99px;}
+a[href|="/fightcalamity"]{background-position: 0 -2810px; width: 154px; height: 150px;}
 
 
-a[href|="/calamitytale"], a[href|="/lpfun"], a[href|="/lpspittake"], a[href|="/bjhate"], a[href|="/lpfof"], a[href|="/psychoshy"], a[href|="/fightcalamity"]
+a[href|="/bjhate"], a[href|="/bjunimpressed"], a[href|="/calamitytale"], a[href|="/homagehug"], a[href|="/lpfof"], a[href|="/lpfillyrear"], a[href|="/lpfun"], a[href|="/lpraep"], a[href|="/lpspittake"], a[href|="/lpwtf"], a[href|="/murk"], a[href|="/plotseverywhere"], a[href|="/psychoshy"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em4-v8%%);
+background-image: url(%%foe-em4-v9%%);
 }
 
 a[href|="/bjhate"]{background-position: 0 0; width: 70px; height: 75px;}
-a[href|="/calamitytale"]{ background-position: 0 -120px; width: 141px; height: 150px;} 
-a[href|="/lpfun"]{background-position: 0 -320px; width: 200px; height: 147px; } 
-a[href|="/lpspittake"]{background-position: 0 -517px; width: 129px; height: 149px; } 
-a[href|="/lpfof"]{background-position: 0 -716px; width: 87px; height: 100px }
-a[href|="/psychoshy"]{ background-position: 0 -866px; width: 98px; height: 150px;}
-a[href|="/psychoshy"]:hover{ background-position: 0 -1066px; width: 98px; height: 150px;}
-a[href|="/fightcalamity"]{background-position: 0 -1266px; width: 154px; height: 150px;}
+a[href|="/bjunimpressed"]{ background-position: 0 -120px; width: 105px; height: 150px; } 
+a[href|="/calamitytale"]{ background-position: 0 -320px; width: 142px; height: 151px;}
+a[href|="/homagehug"]{ background-position: 0 -521px; width: 157px; height: 150px; }
+a[href|="/lpfof"]{background-position: 0 -721px; width: 87px; height: 100px; }
+a[href|="/lpfillyrear"]{ background-position: 0 -871px; width: 69px; height: 100px; } 
+a[href|="/lpfun"]{background-position: 0 -1021px; width: 200px; height: 147px; } 
+a[href|="/lpraep"]{ background-position: 0 -1218px; width: 92px; height: 70px; }
+a[href|="/lpspittake"]{background-position: 0 -1338px; width: 129px; height: 149px; } 
+a[href|="/lpwtf"]{ background-position: 0 -1537px; width: 136px; height: 150px; }
+a[href|="/murk"]{ background-position: 0 -1737px; width: 103px; height: 150px; }
+a[href|="/plotseverywhere"]{ background-position: 0 -1937px; width: 180px; height: 150px; }
+a[href|="/psychoshy"]{ background-position: -250px 0; width: 98px; height: 150px;}
+a[href|="/psychoshy"]:hover{background-position: -250px -200px; width: 98px; height: 150px;}
 
 
 a[href|="/advicebj"]
@@ -368,7 +375,7 @@ a[href|="/advicebj"]
     overflow: hidden !important;
     position: relative !important;
     text-transform: uppercase !important;
-    background-image: url(%%foe-em3-v33%%) !important;
+    background-image: url(%%foe-em3-v34%%) !important;
 }
 
 a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
@@ -395,7 +402,7 @@ a[href|='/advicebj'] strong{
 
 
 a[href|="/lpsign"]{
-    background-image: url(%%foe-em3-v33%%) !important;
+    background-image: url(%%foe-em3-v34%%) !important;
     background-repeat: no-repeat !important;
     display: inline-block !important;
     position: relative !important;
