--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -115,3 +115,12 @@ a[href|="/swordsmile"] {
     height: 70px;
     background-image: url(%%swordsmile%%)
     }
+
+a[href|="/agentp"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 97px;
+    background-image: url(%%agentp%%)
+    }
