--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1057,6 +1057,19 @@ a[href|="/moarmoe"]
     width: 250px;
 }
 
+a[href|="/potatojob"]
+{
+
+ background-image: url(%%potatojob%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 150px;
+    width: 116px;
+}
+
+
+
 
 /*** Title Box ***/
 
