--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -192,6 +192,9 @@ a.author[href$="koushiro"]:after {
 a.author[href$="woodledoodledoodle"]:before {
  content: url(%%sharp-dresser%%) 
 }
+a.author[href$="timbaer"]:before {
+ content: url(%%norippe2%%) 
+}
 a.author[href$="Bionic21"]:before {
  content: url(%%backburner%%) 
 }
