--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -741,6 +741,17 @@ a[href|="/wfworking"] {
 a[href|="/wfworking"] {
     background-position: -0px -0px
     }
+a[href|="/f20"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 400px;
+    height: 135px;
+    background-image: url(%%F20%%)
+    }
+a[href|="/f20"] {
+    background-position: -0px -0px
+    }
 /**********************
 *
 *    OTHER EMOTE STUFF
