--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -152,6 +152,15 @@ a[href|="/bobbobbington"] {
     background-position: -0px -0px
     }
 
+a[href|="/hornbutt"], a[href|="/31eipekili"] {
+    display: block;
+    clear: none;
+    float: left;
+width: 159px;
+height:184px;
+    background-image: url(%%hornbutt%%)
+    }
+
 a[href|="/stopitboner"] {
     display: block;
     clear: none;
