--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -127,6 +127,37 @@ a[href|="/twiflutterhappy"], a[href|="/twishyhappy"] {
     background-image: url(%%twiflutterhappy%%)
     }
 
+/* FinalFlutter emotes, full of cute! */
+
+a[href|="/flutterstache"], a[href|="/shystache"], a[href|="/shysnooze"], a[href|="/bunnysnooze"], a[href|="/bookfortshy"], a[href|="/hidingshy"], a[href|="/saveme"], a[href|="/ineedanadult"], a[href|="/shyhelp"] {
+
+    display: block;
+    clear: none;
+    float: left;
+    height: 150px;
+    background-image: url(%%finalsheet%%) !important
+    }
+
+a[href|="/flutterstache"], a[href|="/shystache"] {
+    width: 150px;
+    background-position: -0px -0px 
+    }
+
+a[href|="/shysnooze"], a[href|="/bunnysnooze"] {
+    width: 225px;
+    background-position: -150px -0px 
+    }
+
+a[href|="/bookfortshy"], a[href|="/hidingshy"] {
+    width: 225px;
+    background-position: -375px -0px 
+    }
+
+a[href|="/saveme"], a[href|="/ineedanadult"], a[href|="/shyhelp"] {
+    width: 200px;
+    background-position: -600px -0px 
+    }
+
 /* Animotes - aPNG emotes! */
 
 a[href|="/fluttersmile"], a[href|="/shysmile"] {
@@ -488,3 +519,82 @@ text-decoration: underline;
     background-position: -0px -0px;
     background-repeat: no-repeat
     }
+
+/******************
+shy emote
+******************/
+a[href="/shy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 100px;
+    background-image: url(%%shytable%%) !important
+ }
+.usertext input[value$="a"] + .usertext-body a[href="/shy"],.usertext input[value$="b"] + .usertext-body a[href="/shy"] {
+    background-position: -0px -0px;
+  }
+
+
+.usertext input[value$="d"] + .usertext-body a[href="/shy"],.usertext input[value$="e"] + .usertext-body a[href="/shy"] {
+    background-position: -100px -0px;
+  }
+.usertext input[value$="g"] + .usertext-body a[href="/shy"],.usertext input[value$="h"] + .usertext-body a[href="/shy"] {
+    background-position: -200px -0px;
+  }
+.usertext input[value$="j"] + .usertext-body a[href="/shy"],.usertext input[value$="k"] + .usertext-body a[href="/shy"] {
+    background-position: -0px -100px;
+  }
+.usertext input[value$="m"] + .usertext-body a[href="/shy"], .usertext input[value$="n"] + .usertext-body a[href="/shy"] {
+    background-position: -100px -100px;
+  }
+.usertext input[value$="p"] + .usertext-body a[href="/shy"],.usertext input[value$="q"] + .usertext-body a[href="/shy"] {
+    background-position: -200px -100px;
+  }
+
+.usertext input[value$="s"] + .usertext-body a[href="/shy"],.usertext input[value$="t"] + .usertext-body a[href="/shy"] {
+    background-position: -0px -200px;
+  }
+.usertext input[value$="u"] + .usertext-body a[href="/shy"],.usertext input[value$="v"] + .usertext-body a[href="/shy"] {
+    background-position: -100px -200px;
+  }
+.usertext input[value$="w"] + .usertext-body a[href="/shy"],.usertext input[value$="x"] + .usertext-body a[href="/shy"] {
+    background-position: -200px -200px;
+  }
+
+.usertext input[value$="y"] + .usertext-body a[href="/shy"],.usertext input[value$="f"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -300px; 
+  }
+.usertext input[value$="z"] + .usertext-body a[href="/shy"],.usertext input[value$="i"] + .usertext-body a[href="/shy"] { 
+background-position: -100px -300px; 
+  }
+.usertext input[value$="0"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -300px; 
+  }
+.usertext input[value$="1"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -400px; 
+  }
+.usertext input[value$="2"] + .usertext-body a[href="/shy"] { 
+background-position: -100px -400px; 
+  }
+.usertext input[value$="3"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -400px; 
+  }
+.usertext input[value$="4"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -500px; 
+  }
+.usertext input[value$="5"] + .usertext-body a[href="/shy"],.usertext input[value$="o"] + .usertext-body a[href="/shy"] { 
+background-position: -100px -500px; 
+  }
+.usertext input[value$="6"] + .usertext-body a[href="/shy"],.usertext input[value$="r"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -500px; 
+  }
+.usertext input[value$="7"] + .usertext-body a[href="/shy"],.usertext input[value$="l"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -600px; 
+  }
+.usertext input[value$="8"] + .usertext-body a[href="/shy"],.usertext input[value$="c"] + .usertext-body a[href="/shy"]  { 
+background-position: -100px -600px; 
+  }
+.usertext input[value$="9"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -600px; 
+  }
