--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -343,7 +343,7 @@ left: 0;
     font-size: 10px;
     color: #369;
     cursor: pointer;
-    content: "Taco";
+    content: "best Taco ♥";
 }
 
 /* No flair on modbox */
@@ -405,6 +405,22 @@ a.author[href$="Juz19"]:after {
     letter-spacing: normal
     }
 
+a.author[href$="DiscordDraconequus"] {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px
+    }
+a.author[href$="DiscordDraconequus"]:after {
+    content: "PretzelDraconequus";
+    font-size: 10px !important;
+    visibility: visible !important;
+    display: block;
+    letter-spacing: normal
+    }
+
+
 /* Juz (PSST I DEFINITELY DIDN'T STEAL THIS FROM THE PLOUNGE ARE YOU CRAZY PFFFFT) */
 
 #siteTable_t3_15usdv a.author {
@@ -422,3 +438,82 @@ a.author[href$="Juz19"]:after {
     display: block;
     letter-spacing: normal;
     }
+
+/******************
+shy emote
+BECAUSE THIS FITS THE MAFIA SUB PERFECTLY AND NOT BECAUSE SHE'S JUST OUR FAVORITE PONY
+******************/
+a[href="/shy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 100px;
+    background-image: url(%%shytable%%) !important
+ }
+.usertext input[value$="a"] + .usertext-body a[href="/shy"],.usertext input[value$="b"] + .usertext-body a[href="/shy"] {
+    background-position: -0px -0px;
+  }
+
+.usertext input[value$="d"] + .usertext-body a[href="/shy"],.usertext input[value$="e"] + .usertext-body a[href="/shy"] {
+    background-position: -100px -0px;
+  }
+.usertext input[value$="g"] + .usertext-body a[href="/shy"],.usertext input[value$="h"] + .usertext-body a[href="/shy"] {
+    background-position: -200px -0px;
+  }
+.usertext input[value$="j"] + .usertext-body a[href="/shy"],.usertext input[value$="k"] + .usertext-body a[href="/shy"] {
+    background-position: -0px -100px;
+  }
+.usertext input[value$="m"] + .usertext-body a[href="/shy"], .usertext input[value$="n"] + .usertext-body a[href="/shy"] {
+    background-position: -100px -100px;
+  }
+.usertext input[value$="p"] + .usertext-body a[href="/shy"],.usertext input[value$="q"] + .usertext-body a[href="/shy"] {
+    background-position: -200px -100px;
+  }
+
+.usertext input[value$="s"] + .usertext-body a[href="/shy"],.usertext input[value$="t"] + .usertext-body a[href="/shy"] {
+    background-position: -0px -200px;
+  }
+.usertext input[value$="u"] + .usertext-body a[href="/shy"],.usertext input[value$="v"] + .usertext-body a[href="/shy"] {
+    background-position: -100px -200px;
+  }
+.usertext input[value$="w"] + .usertext-body a[href="/shy"],.usertext input[value$="x"] + .usertext-body a[href="/shy"] {
+    background-position: -200px -200px;
+  }
+
+.usertext input[value$="y"] + .usertext-body a[href="/shy"],.usertext input[value$="f"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -300px; 
+  }
+.usertext input[value$="z"] + .usertext-body a[href="/shy"],.usertext input[value$="i"] + .usertext-body a[href="/shy"] { 
+background-position: -100px -300px; 
+  }
+.usertext input[value$="0"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -300px; 
+  }
+.usertext input[value$="1"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -400px; 
+  }
+.usertext input[value$="2"] + .usertext-body a[href="/shy"] { 
+background-position: -100px -400px; 
+  }
+.usertext input[value$="3"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -400px; 
+  }
+.usertext input[value$="4"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -500px; 
+  }
+.usertext input[value$="5"] + .usertext-body a[href="/shy"],.usertext input[value$="o"] + .usertext-body a[href="/shy"] { 
+background-position: -100px -500px; 
+  }
+.usertext input[value$="6"] + .usertext-body a[href="/shy"],.usertext input[value$="r"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -500px; 
+  }
+.usertext input[value$="7"] + .usertext-body a[href="/shy"],.usertext input[value$="l"] + .usertext-body a[href="/shy"] { 
+background-position: -0px -600px; 
+  }
+.usertext input[value$="8"] + .usertext-body a[href="/shy"],.usertext input[value$="c"] + .usertext-body a[href="/shy"]  { 
+background-position: -100px -600px; 
+  }
+.usertext input[value$="9"] + .usertext-body a[href="/shy"] { 
+background-position: -200px -600px; 
+  }
